--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
     <section>
         <div class="container">
+            <h1>Accordion</h1>
             <div class="accordion">
 
-                <!-- <div class="accodion__wrap">
+                <div class="accodion__wrap">
                     <div class="accordion__name">
                         <p>first</p>
                         <img class="plus" src="./plus.png" alt="">
@@ -24,7 +25,7 @@
                             reprehenderit sed, ea quis aliquid eligendi, unde doloremque provident perspiciatis
                             voluptatem voluptatum expedita dolor dolorum velit ab?</p>
                     </div>
-                </div> -->
+                </div>
 
 
             </div>
