--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section>
         <div class="container">
-            <h1>Accordion</h1>
+            <h1>super accordion</h1>
             <div class="accordion">
 
                 <div class="accodion__wrap">
